--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@sendgrid/mail": "^7.7.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "i18next": "^23.7.7",
     "next": "13.4.7",
     "next-i18next": "^15.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^13.5.0",
     "react-icons": "^4.10.1"
   },
   "devDependencies": {
