--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "18.2.0",
     "react-i18next": "^13.5.0",
     "react-icons": "^4.10.1",
-    "react-intersection-observer": "^9.8.0"
+    "react-intersection-observer": "^9.8.0",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
